[package]
name = "expresscord"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.21"
env_logger = "0.11.3"
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
futures-util = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }

